@@ -12,7 +12,8 @@ filebeat:
         level: debug
         review: 1
         type: log
-      ignore_older: 24h
+      ignore_older: 0
+      close_older: 1h
       scan_frequency: 10s
       harvester_buffer_size: 5000
       tail_files: false
