@@ -8,7 +8,8 @@ filebeat:
       #fields:
       #  level: debug
       #  review: 1
-      ignore_older: 24h
+      ignore_older: 0
+      close_older: 1h
       scan_frequency: 0s
       harvester_buffer_size: 1000000
 
